syntax = "proto3";

option csharp_namespace = "Shared.Grpc"; // Общее пространство имён

package user;

service UserService {
  rpc GetUserById (GetUserByIdRequest) returns (UserDto);
}

message GetUserByIdRequest {
  string userId = 1;
}

message UserDto {
  string id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
}
